Wed Jul 19 22:11:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* shared.h (class pinfo): New members `root' and `rootlen'.
	* syscalls.cc (chroot): Set new root for process.
	* path.cc (getcwd_inner): Add parameter to force use of
	new root from chroot() call.
	(ischrootpath): New macro.
	(normalize_posix_path): Care for changed root dir.
	(normalize_win32_path): Ditto.
	(getcwd_inner): Ditto.
	(chdir): Eliminate trailing path component consisting
	entirely of dots.
	* fork.cc (fork): Copy pinfo members regarding chroot().
	* spawn.cc (_spawnve): Ditto.
	* dir.cc (opendir): Don't use computed win32 path if
	chroot() took place.

Mon Jul 17 22:21:34 2000  Christopher Faylor <cgf@cygnus.com>

	* dll_init.cc (dll_list::alloc): Fix debugging output.

Mon Jul 17 14:57:53 2000  Christopher Faylor <cgf@cygnus.com>

	Throughout, eliminate third argument to path_conv and use new PC_*
	constants for second argument.
	* dcrt0.cc (dll_crt0_1): Reorganize to allow more initialization prior
	to returning due to dynamic loading.
	* path.h: Generalize SYMLINK_* constants to PC_*.
	(path_conv): Create a new method.  Fold third argument into second.
	* dll_init.cc (dll_list::alloc): Try harder to find space to allocate
	dll struct.
	(dll_dllcrt0): Don't check sanity if we've already called dll_crt0.
	* path.cc (path_conv::check): Don't check for a null or empty path
	unless specifically told with a flag setting.
	(check_null_empty_path): New function, adapted from macro.
	* syscalls.cc (_rename): Use already-determined file attributes rather
	than checking again.
	* lib/cygwin/cygwin_attach.dll.c (cygwin_attach_dll): Use a static
	per_process structure since this is apparently supposed to be zeroed.
	* lib/cygwin_crt0.c (cygwin_crt0): Zero per_process structure sent to
	older DLLs.

Mon Jul 17 19:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	Patch suggested by Eric Fifer <EFifer@sanwaint.com>
	* poll.cc (poll): Fix erroneous negations.
